# interactive-learning-duo

./: .gitignore  .sample.env  CITATION.cff  README.md  main.py  notebook_app.ipynb  pyproject.toml  pythonqa.db  schema.sql
app/: config.py  dependencies.py
app/db/: address.py  dashboardstats.py  data_model.py  qa.py  qa_category.py  sql.py  sqlconn.py  user.py  vectordb.py
app/routers/: auth.py  chat.py  dashboard.py  landing.py  users.py
app/templates/: 404.html  all_qa.html  chatbot.html  dashboard.html  forgot-password.html  login.html  profile.html  register.html  settings.html  table.html
app/templates/assets/landing/css/: styles.min.css
app/templates/landing/: index.html
app/templates/shared/: base.html  footer_script.html  header_script.html  navbar.html  sidebar.html
llms/: code_llama2.py
qdrant_db/: meta.json
qdrant_db/collection/source_code/: storage.sqlite
